--- a/conanio/Dockerfile
+++ b/conanio/Dockerfile
@@ -21,6 +21,7 @@ COPY . .
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED 1
 
+RUN yarn test:ci
 RUN yarn build
 
 # If using npm comment out above and use below instead
