--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,4 +7,4 @@ RUN pip3 install -r requirements.txt
 
 COPY app.py app.py
 
-CMD [ "python3", "app.py"]
+CMD [ "uvicorn", "app:app", "--reload", "--port", "5000"]
