--- a/conanio/package.json
+++ b/conanio/package.json
@@ -18,14 +18,15 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
+    "recharts": "^2.1.10",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0"
   }
