--- a/server/src/Dockerfile
+++ b/server/src/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /python-docker
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY model.py model.py
-COPY app.py app.py
+ADD  src /python-docker
 
 CMD [ "uvicorn", "app:app", "--reload", "--port", "5000"]
