--- a/conanio/.gitignore
+++ b/conanio/.gitignore
@@ -7,20 +7,26 @@
 
 # testing
 /coverage
-test.db
+
+# next.js
+/.next/
+/out/
 
 # production
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-test-server/venv
+# local env files
+.env*.local
+
+# vercel
+.vercel
