--- a/conanio/package.json
+++ b/conanio/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
+    "react-slick": "^0.29.0",
     "recharts": "^2.1.10",
+    "slick-carousel": "^1.8.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
