--- a/conanio/package.json
+++ b/conanio/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
     "react-slick": "^0.29.0",
+    "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0"
