--- a/conanio/package.json
+++ b/conanio/package.json
@@ -22,7 +22,9 @@
     "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
