--- a/conanio/package.json
+++ b/conanio/package.json
@@ -23,8 +23,7 @@
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0",
-    "rehype-highlight": "^6.0.0",
-    "remark-gfm": "^3.0.1"
+    "rehype-highlight": "^6.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
