--- a/conanio/package.json
+++ b/conanio/package.json
@@ -18,12 +18,13 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
+    "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
+    "rehype-highlight": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "swr": "^1.3.0",
-    "rehype-highlight": "^6.0.0"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
