--- a/conanio/package.json
+++ b/conanio/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.10.1",
     "react-markdown": "^8.0.3",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
