--- a/conanio/package.json
+++ b/conanio/package.json
@@ -24,7 +24,8 @@
     "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "highlight.js": "11.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
