--- a/conanio/package.json
+++ b/conanio/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "highlight.js": "11.8.0",
     "install": "^0.13.0",
     "next": "12.1.6",
     "npm": "^8.12.0",
@@ -19,13 +20,13 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.3",
+    "react-responsive": "^9.0.2",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
-    "swr": "^1.3.0",
-    "highlight.js": "11.8.0"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
