--- a/conanio/Dockerfile
+++ b/conanio/Dockerfile
@@ -7,12 +7,11 @@ WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
-# If using npm with a `package-lock.json` comment out above and use below instead
-# COPY package.json package-lock.json ./
-# RUN npm ci
-
 # Rebuild the source code only when needed
 FROM node:16-alpine AS builder
+
+ARG NEXT_PUBLIC_CONAN_VERSION
+
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -20,7 +19,7 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 
 # RUN yarn test:ci
-RUN yarn build
+RUN yarn build . NEXT_PUBLIC_CONAN_VERSION=${NEXT_PUBLIC_CONAN_VERSION}
 
 # Production image, copy all the files and run next
 FROM node:16-alpine AS runner
@@ -28,13 +27,13 @@ WORKDIR /app
 
 ENV NODE_ENV production
 # Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 # You only need to copy next.config.js if you are NOT using the default configuration
-# COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
 
@@ -48,5 +47,7 @@ USER nextjs
 EXPOSE 3000
 
 ENV PORT 3000
+
+RUN set
 
 CMD ["node", "server.js"]
