Exposing auth API

--- a/conanio/.env.production
+++ b/conanio/.env.production
@@ -1,3 +1,4 @@
 CONANIO_SERVER=http://conanio-server:5000
+CONANIO_AUTH_SERVER=http://conanio-auth-server:5001
 GTM_ID=GTM-WK44ZFM
 GTM_URL=https://www.googletagmanager.com/gtm.js
