--- a/conanio/.env.production
+++ b/conanio/.env.production
@@ -1,2 +1,4 @@
+CONANIO_SERVER=http://conanio-server:5000
+CONANIO_AUTH_SERVER=http://conanio-auth-server:5000
 GTM_ID=GTM-WK44ZFM
 GTM_URL=https://www.googletagmanager.com/gtm.js
