--- a/conanio/package.json
+++ b/conanio/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "highlight.js": "11.8.0",
     "install": "^0.13.0",
-    "next": "12.1.6",
+    "next": "^14.2.4",
     "npm": "^8.12.0",
-    "react": "18.1.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.3",
     "react-responsive": "^9.0.2",
@@ -33,7 +33,7 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^14.2.4",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0"
   }
