--- a/conanio/.env.development
+++ b/conanio/.env.development
@@ -1,3 +1,3 @@
-CONANIO_SERVER=http://127.0.0.1:4000
+NEXT_PUBLIC_CONAN_CONANIO_SERVICE=http://127.0.0.1:4000
 GTM_ID=DEVELOP
 GTM_URL=http://0.0.0.0.fake:4000
