--- a/conanio/Dockerfile
+++ b/conanio/Dockerfile
@@ -20,7 +20,7 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 
 # RUN yarn test:ci
-RUN yarn build . NEXT_PUBLIC_CONAN_VERSION=${NEXT_PUBLIC_CONAN_VERSION} NEXT_PUBLIC_CONAN_CONANIO_SERVICE={NEXT_PUBLIC_CONAN_CONANIO_SERVICE}
+RUN yarn build . NEXT_PUBLIC_CONAN_VERSION=${NEXT_PUBLIC_CONAN_VERSION} NEXT_PUBLIC_CONAN_CONANIO_SERVICE=${NEXT_PUBLIC_CONAN_CONANIO_SERVICE}
 
 # Production image, copy all the files and run next
 FROM node:22.3.0-alpine AS runner
