--- a/conanio/package.json
+++ b/conanio/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "highlight.js": "11.8.0",
     "install": "^0.13.0",
     "next": "^14.2.4",
