--- a/conanio/package.json
+++ b/conanio/package.json
@@ -33,9 +33,9 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
-    "eslint": "8.16.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.4",
     "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0"
+    "jest-environment-jsdom": "29.7.0"
   }
 }
