--- a/conanio/.env.production
+++ b/conanio/.env.production
@@ -1,3 +1,3 @@
 CONANIO_SERVER=http://conanio-server:5000
 GTM_ID=GTM-WK44ZFM
-GTM_URL=https://www.googletagmanager.com/gtm.js
+GTM_URL=https://gtm.jfrog.com/gtm.js
