--- a/conanio/Dockerfile
+++ b/conanio/Dockerfile
@@ -1,5 +1,5 @@
 # Install dependencies only when needed
-FROM node:23.7.0-alpine AS deps
+FROM node:24.5.0-alpine AS deps
 
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
@@ -8,7 +8,7 @@ COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
 # Rebuild the source code only when needed
-FROM node:23.7.0-alpine AS builder
+FROM node:24.5.0-alpine AS builder
 
 ARG NEXT_PUBLIC_CONAN_VERSION
 ARG NEXT_PUBLIC_CONAN_CONANIO_SERVICE
@@ -17,18 +17,18 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN yarn test:ci
 RUN yarn build . NEXT_PUBLIC_CONAN_VERSION=${NEXT_PUBLIC_CONAN_VERSION} NEXT_PUBLIC_CONAN_CONANIO_SERVICE=${NEXT_PUBLIC_CONAN_CONANIO_SERVICE}
 
 # Production image, copy all the files and run next
-FROM node:23.7.0-alpine AS runner
+FROM node:24.5.0-alpine AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 # Uncomment the following line in case you want to disable telemetry during runtime.
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -47,7 +47,7 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
+ENV PORT=3000
 
 RUN set
 
