--- a/conanio/package.json
+++ b/conanio/package.json
@@ -18,9 +18,9 @@
     "install": "^0.13.0",
     "next": "^14.2.25",
     "npm": "^8.12.0",
-    "react": "^18.3.1",
+    "react": "19.2.1",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^9.0.0",
     "react-responsive": "^9.0.2",
@@ -35,6 +35,8 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "@types/react": "19.2.1",
+    "@types/react-dom": "19.2.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.25",
     "eslint-config-prettier": "^9.1.0",
