--- a/conanio/package.json
+++ b/conanio/package.json
@@ -29,7 +29,8 @@
     "react-tooltip": "^5.13.1",
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tar": "^7.5.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
