--- a/conanio/package.json
+++ b/conanio/package.json
@@ -13,10 +13,13 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@isaacs/brace-expansion": "^5.0.1",
     "bootstrap": "^5.3.3",
+    "diff": "^5.2.2",
     "highlight.js": "11.8.0",
     "install": "^0.13.0",
-    "next": "^14.2.35",
+    "lodash": "^4.17.23",
+    "next": "^15.5.10",
     "npm": "^8.12.0",
     "react": "19.2.1",
     "react-bootstrap": "^2.4.0",
@@ -30,7 +33,7 @@
     "recharts": "^2.1.10",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0",
-    "tar": "^7.5.3"
+    "tar": "^7.5.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
@@ -39,7 +42,7 @@
     "@types/react": "19.2.1",
     "@types/react-dom": "19.2.1",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.35",
+    "eslint-config-next": "^15.5.10",
     "eslint-config-prettier": "^9.1.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "29.7.0",
